--- a/package.json
+++ b/package.json
@@ -9,23 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@supabase/ssr": "latest",
+    "@supabase/supabase-js": "latest",
     "@tailwindcss/postcss": "^4.1.8",
-    "next": "15.3.2",
+    "autoprefixer": "10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
+    "next": "latest",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
+    "react-masonry-css": "^1.0.16",
     "tailwindcss": "^4.1.8",
-    "@supabase/supabase-js": "^2.49.8",
-    "lucide-react": "^0.511.0",
-    "react-masonry-css": "^1.0.16"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "19.0.2",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "latest",
+    "tailwind-merge": "^2.5.2",
     "typescript": "^5"
   }
 }
