--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.39.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "^14.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.57.0",
     "react-masonry-css": "^1.0.16",
     "yup": "^1.6.1"
@@ -29,16 +28,16 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "autoprefixer": "10.4.20",
-    "eslint": "^9",
     "eslint-config-next": "latest",
     "postcss": "^8.5.3",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^4.1.8",
+    "tailwindcss": "^3.4.3",
+    "eslint": "^8.56.0",
     "typescript": "^5"
   }
 }
