--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
@@ -37,7 +37,7 @@
     "eslint-config-next": "latest",
     "postcss": "^8.5.3",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
